# daily

./: .gitignore  1  AstroMeem.sol  README.md  SafeOttoman.sol  antiWhaleSafeMoon.sol  erc20Factory.sol  jupyter.txt  kafka-produce-consume.py  moonkey.sol  notes.py  pythonyahoo_finance_simple.py  redis-simple.hs  yesod-basic.hs
2017-09-06/: iterator.py  script.py
LaTeX/: 05-fifth.tex
New folder/: 2.txt  4.txt
Udemy/: css1.css  html1.html  index.html  indexb.html  style.css
bash/: .dcos-azure.sh.swp  TCPH-pyspark-sqlite.sh  app-services-node-with-db.sh  app-services-simple.sh  az-service-principal.sh  az_vm_linux_rdp.sh  azure-MEAN.sh  azure_dbs.sh  bigtop.sh  chainlink-node-azure.sh  check_env_var.sh  cobol-hello-world.sh  compiling-hadoop.sh  concord.sh  create-github-repo.sh  create_az_function.sh  dcos-azure.sh  dcos-concord-cassandra.sh  dcos-sql-server.sh  deploy-webapp-git.sh  docker-simple.sh  genesis.json  get-dbgen.sh  geth-contract-interaction-curl.sh  google_cloud_kube_start.sh  grin.sh  hello-web.json  holochain-hApp.sh  implementing_bind_as_a_dns_server.sh  influxdb.sh  install-wireshark.sh  install_prometheus.sh  kube_docker.sh  kubectl_get.sh  kubernetes_exercises.sh  kubernetes_exercises_2.sh  kubernetes_exercises_3.sh  libvirt.sh  openssl-hashing.sh  private-chain-ethereum-clique.sh  (+22 more)
basic-template-haskell/: ChangeLog.md  package.yaml
chatgpt/: boardingactionsnurgle.py  makret_microstructure_2.py  marketMicrostructure.py
go/: 02_values.go  (+6 more)
haskell/json-web-service/: README.md  json-web-service.cabal
haskell/json-web-service/src/: Main.hs
(+635 files in other folders)
